Fixed lineheight issue for Firefox

--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_forms.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_forms.scss
@@ -44,7 +44,7 @@
   background: $input-background;
   color: $input-color;
   font-size: $form-fontsize;
-  line-height: 1;
+  line-height: 1rem;
   -webkit-font-smoothing: antialiased;
   transition: $input-transition-base;
 
