Adjusted close-button padding

--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_extras.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_extras.scss
@@ -9,8 +9,8 @@
 
   position: absolute;
   color: $closebutton-color;
-  #{$x}: $global-padding;
-  #{$y}: $global-padding;
+  #{$x}: 1rem;
+  #{$y}: 1rem;
   font-size: $closebutton-size;
   line-height: $closebutton-lineheight;
   cursor: pointer;
